--- a/index.html
+++ b/index.html
@@ -1,279 +1,30 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Compro Oro Frascati</title>
-  <!-- Google Fonts e FontAwesome -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/yourkit.js" crossorigin="anonymous"></script>
-  <style>
-    :root {
-      --primary: #FFD700;
-      --dark: #000000;
-      --dark-2: #333333;
-      --light: #FFFFFF;
-      --text: #222222;
-      --transition: 0.3s;
-      --radius: 10px;
-      --shadow: 0 6px 20px rgba(0,0,0,0.15);
-    }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: 'Poppins', 'Montserrat', sans-serif;
-      background: var(--light);
-      color: var(--text);
-      line-height: 1.6;
-      scroll-behavior: smooth;
-    }
-    header {
-      background: var(--dark);
-      color: var(--primary);
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-    header .logo {
-      font-size: 2.5rem;
-      font-weight: 700;
-      letter-spacing: 2px;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
-    }
-    /* NAVBAR */
-    nav {
-      background: var(--dark-2);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    nav .menu { display: flex; gap: 2rem; }
-    nav a {
-      color: var(--light);
-      font-weight: 500;
-      position: relative;
-      padding: 0.5rem;
-      transition: color var(--transition);
-    }
-    nav a::after {
-      content: '';
-      position: absolute;
-      left: 0; bottom: -5px;
-      width: 0; height: 3px;
-      background: var(--primary);
-      transition: width var(--transition);
-    }
-    nav a:hover { color: var(--primary); }
-    nav a:hover::after { width: 100%; }
-    .hamburger { display: none; font-size: 1.75rem; color: var(--light); cursor: pointer; }
-
-    /* HERO PARALLAX */
-    .hero {
-      background: url('https://images.unsplash.com/photo-1573636367218-212cc4868199?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
-      background-attachment: scroll;
-      min-height: 80vh;
-      padding: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: var(--light);
-      position: relative;
-    }
-    .hero::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.5);
-    }
-    .hero-content {
-      position: relative;
-      z-index: 1;
-      max-width: 800px;
-      margin: 0 1rem;
-    }
-    .hero h1 {
-      font-size: 3.5rem;
-      margin-bottom: 1rem;
-      letter-spacing: 3px;
-    }
-    .hero p { font-size: 1.5rem; margin-bottom: 2rem; }
-    .hero .btn {
-      background: var(--primary);
-      color: var(--dark);
-      padding: 1rem 2.5rem;
-      font-size: 1rem;
-      font-weight: 700;
-      border: none;
-      border-radius: var(--radius);
-      cursor: pointer;
-      transition: transform var(--transition), box-shadow var(--transition);
-      text-decoration: none;
-      display: inline-block;
-    }
-    .hero .btn:hover {
-      transform: translateY(-4px);
-      box-shadow: var(--shadow);
-    }
-
-    /* SECTIONS */
-    .section { padding: 4rem 2rem; text-align: center; }
-    .section h2 {
-      margin-bottom: 2rem;
-      font-size: 2.25rem;
-      color: var(--dark);
-      font-weight: 700;
-      letter-spacing: 1px;
-    }
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px,1fr));
-      gap: 2.5rem;
-    }
-    .feature-card {
-      background: var(--light);
-      padding: 2.5rem;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      transition: transform var(--transition), box-shadow var(--transition);
-    }
-    .feature-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-    }
-    .feature-card i {
-      font-size: 2.5rem;
-      color: var(--primary);
-      margin-bottom: 1rem;
-    }
-    .feature-card h3 {
-      margin-bottom: 0.75rem;
-      font-size: 1.25rem;
-      font-weight: 600;
-    }
-
-    /* TESTIMONIALS */
-    .testimonials { background: var(--light); }
-    .testimonial {
-      max-width: 650px;
-      margin: 0 auto 2.5rem;
-      padding: 1.5rem;
-      font-style: italic;
-      position: relative;
-      border-left: 5px solid var(--primary);
-      background: var(--light);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-    }
-    .testimonial::before {
-      content: '“';
-      font-size: 3.5rem;
-      position: absolute;
-      top: -15px; left: -15px;
-      color: var(--primary);
-    }
-
-    /* FOOTER */
-    footer {
-      background: var(--dark-2);
-      color: var(--light);
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-    .socials a {
-      color: var(--light);
-      margin: 0 0.75rem;
-      font-size: 1.5rem;
-      transition: color var(--transition);
-    }
-    .socials a:hover { color: var(--primary); }
-
-    @media(max-width:768px){
-      .hamburger { display: block; }
-      nav .menu { display: none; flex-direction: column; gap:1rem; background: var(--dark-2); position: absolute; top:100%; left:0; width:100%; padding:1rem 2rem; }
-      nav .menu.open { display: flex; }
-      .hero h1 { font-size: 2.8rem; }
-      .hero p { font-size: 1.25rem; }
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-
-  <header>
-    <div class="logo">Compro Oro Frascati</div>
-    <p>Valutazioni Immediate, Pagamenti Immediati</p>
-  </header>
-
-  <nav>
-    <div class="logo" style="color:var(--light); font-size:1.25rem; font-weight:700;">COF</div>
-    <div class="hamburger"><i class="fas fa-bars"></i></div>
-    <div class="menu">
-      <a href="index.html">Home</a>
-      <a href="stima.html">Stima Oro</a>
-      <a href="chi-siamo.html">Chi Siamo</a>
-      <a href="come-funziona.html">Come Funziona</a>
-      <a href="faq.html">FAQ</a>
-      <a href="contatti.html">Contatti</a>
-    </div>
-  </nav>
-
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Benvenuto su Compro Oro Frascati</h1>
-      <p>Scopri come vendere il tuo oro in modo sicuro, veloce e vantaggioso. Ti guidiamo passo dopo passo.</p>
-      <a href="stima.html" class="btn">Calcola la tua stima</a>
-    </div>
-  </section>
-
-  <section class="section" id="perche">
-    <h2>Perché sceglierci</h2>
-    <div class="features">
-      <div class="feature-card">
-        <i class="fas fa-clock"></i>
-        <h3>Rapido</h3>
-        <p>Valutazioni immediate in pochi minuti.</p>
-      </div>
-      <div class="feature-card">
-        <i class="fas fa-hand-holding-usd"></i>
-        <h3>Pagamenti Immediati</h3>
-        <p>Ricevi il pagamento sul posto, senza attese.</p>
-      </div>
-      <div class="feature-card">
-        <i class="fas fa-shield-alt"></i>
-        <h3>Trasparenza</h3>
-        <p>Processo chiaro e prezzi sempre aggiornati.</p>
-      </div>
-      <div class="feature-card">
-        <i class="fas fa-map-marker-alt"></i>
-        <h3>In Centro</h3>
-        <p>Comodo punto vendita a Frascati.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section testimonials" id="testimonianze">
-    <h2>Cosa dicono i clienti</h2>
-    <div class="testimonial">Servizio eccezionale e prezzo imbattibile! – <strong>Maria R.</strong></div>
-    <div class="testimonial">Personale professionale e molto gentile. – <strong>Luca F.</strong></div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Compro Oro Frascati</p>
-    <div class="socials">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-whatsapp"></i></a>
-    </div>
-  </footer>
-
-  <script>
-    // Toggle mobile menu
-    const ham = document.querySelector('.hamburger');
-    const menu = document.querySelector('.menu');
-    ham.addEventListener('click', () => menu.classList.toggle('open'));
-  </script>
-
+<header>
+  <h1>Compro Oro Frascati</h1>
+  <p>Valutazioni Immediate, Pagamenti Immediati</p>
+</header>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="stima.html">Stima Oro</a>
+  <a href="chi-siamo.html">Chi Siamo</a>
+  <a href="come-funziona.html">Come Funziona</a>
+  <a href="faq.html">FAQ</a>
+  <a href="contatti.html">Contatti</a>
+</nav>
+<section class="hero">
+  <h2>Vendere Oro Non è Mai Stato Così Semplice</h2>
+  <a href="stima.html" class="btn">Calcola Ora la Tua Stima</a>
+</section>
+<footer>&copy; 2025 Compro Oro Frascati</footer>
 </body>
 </html>
