--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -1,201 +1,9 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chi Siamo - Compro Oro Frascati</title>
-  <!-- Google Fonts e FontAwesome -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/yourkit.js" crossorigin="anonymous"></script>
-  <style>
-    :root {
-      --gold: #FFD700;
-      --black: #000;
-      --dark-gray: #333;
-      --dark-gray2: #2a2a2a;
-      --light-gray: #f4f4f4;
-      --white: #fff;
-      --radius: 10px;
-      --shadow: 0 6px 20px rgba(0,0,0,0.15);
-      --transition: 0.3s;
-    }
-    *, *::before, *::after { box-sizing: border-box; margin:0; padding:0; }
-    body {
-      font-family: 'Poppins', 'Montserrat', sans-serif;
-      background: var(--light-gray);
-      color: var(--dark-gray);
-      line-height:1.6;
-      scroll-behavior: smooth;
-    }
-    header {
-      background: var(--black);
-      color: var(--gold);
-      text-align: center;
-      padding:2rem 1rem;
-    }
-    header h1 { font-size:2.5rem; letter-spacing:2px; margin-bottom:0.5rem; }
-    header p { font-size:1rem; }
-    /* NAVBAR */
-    nav {
-      background: var(--dark-gray2);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    nav .logo { color: var(--white); font-weight: 700; font-size: 1.5rem; cursor: pointer; }
-    nav .menu { display: flex; gap:1.5rem; }
-    nav a {
-      color: var(--white);
-      text-decoration:none;
-      font-weight:600;
-      position:relative;
-      padding:0.25rem;
-      transition: color var(--transition);
-    }
-    nav a.active, nav a:hover { color: var(--gold); }
-    nav a::after {
-      content: '';
-      position:absolute;
-      left:0; bottom:-4px;
-      width:0; height:2px;
-      background: var(--gold);
-      transition: width var(--transition);
-    }
-    nav a.active::after, nav a:hover::after { width:100%; }
-    .hamburger {
-      display:none;
-      font-size:1.5rem;
-      color: var(--white);
-      cursor:pointer;
-    }
-    /* HERO */
-    .hero {
-      background: url('https://images.unsplash.com/photo-1594087659309-1abbf02b96c8?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
-      min-height:60vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      position:relative;
-      color: var(--white);
-    }
-    .hero::before { content:'';position:absolute;inset:0;background:rgba(0,0,0,0.6); }
-    .hero-content { position:relative;z-index:1;max-width:700px;margin:0 1rem; }
-    .hero-content h2 { font-size:2.75rem;margin-bottom:1rem;letter-spacing:2px; }
-    .hero-content p { font-size:1.2rem; max-width:600px; margin:auto; }
-    /* SEZIONI */
-    .section { padding:4rem 1rem; text-align:center; }
-    .section h3 { font-size:2rem;margin-bottom:1rem;color:var(--black); }
-    .section p { max-width:800px; margin: 0 auto; font-size:1.1rem; }
-    .features { display:grid; grid-template-columns:repeat(auto-fit, minmax(220px,1fr)); gap:2rem; margin-top:2rem; }
-    .feature-card { background: var(--white); padding:2rem; border-radius:var(--radius); box-shadow:var(--shadow); transition:transform var(--transition),box-shadow var(--transition); }
-    .feature-card:hover { transform:translateY(-6px); box-shadow:0 12px 30px rgba(0,0,0,0.25); }
-    .feature-card i { font-size:2.5rem;color:var(--gold);margin-bottom:1rem; }
-    .feature-card h4 { margin-bottom:0.5rem;font-size:1.3rem;font-weight:600; }
-    .feature-card p { font-size:1rem; }
-    /* CTA */
-    .cta {
-      background: var(--gold);
-      color: var(--black);
-      text-align:center;
-      padding:2rem 1rem;
-      margin:2rem 0;
-    }
-    .cta a {
-      display:inline-block;
-      background: var(--black);
-      color: var(--gold);
-      padding:0.75rem 1.5rem;
-      border-radius:var(--radius);
-      text-decoration:none;
-      font-weight:700;
-      transition: background var(--transition), color var(--transition);
-    }
-    .cta a:hover { background: var(--dark-gray2); color: var(--white); }
-    /* FOOTER */
-    footer { background: var(--black); color:var(--white); text-align:center; padding:1.5rem 1rem; }
-    /* RESPONSIVE */
-    @media(max-width:768px) {
-      .hamburger { display:block; }
-      nav .menu { display:none; flex-direction:column; gap:1rem; background:var(--dark-gray2); position:absolute; top:100%; left:0; width:100%; padding:1rem 2rem; }
-      nav .menu.open { display:flex; }
-      .hero-content h2 { font-size:2.25rem; }
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Chi Siamo</h1>
-    <p>Il primo servizio mobile di acquisto oro: veniamo noi da te!</p>
-  </header>
-
-  <nav>
-    <div class="logo" onclick="location.href='index.html'">COF</div>
-    <div class="hamburger"><i class="fas fa-bars"></i></div>
-    <div class="menu">
-      <a href="index.html">Home</a>
-      <a href="stima.html">Stima Oro</a>
-      <a href="chi-siamo.html" class="active">Chi Siamo</a>
-      <a href="come-funziona.html">Come Funziona</a>
-      <a href="faq.html">FAQ</a>
-      <a href="contatti.html">Contatti</a>
-    </div>
-  </nav>
-
-  <section class="hero">
-    <div class="hero-content">
-      <h2>Siamo dove sei tu</h2>
-      <p>Su appuntamento veniamo direttamente da te con kit professionale per valutare e comprare il tuo oro in totale sicurezza.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <h3>La nostra missione</h3>
-    <p>Portare convenienza e trasparenza direttamente a domicilio, eliminando spostamenti e attese. Un servizio personalizzato, rapido e sicuro.</p>
-  </section>
-
-  <section class="section">
-    <h3>Come funziona</h3>
-    <div class="features">
-      <div class="feature-card">
-        <i class="fas fa-calendar-alt"></i>
-        <h4>1. Prenota</h4>
-        <p>Scegli data e fascia oraria tramite il form online o telefonicamente.</p>
-      </div>
-      <div class="feature-card">
-        <i class="fas fa-truck-loading"></i>
-        <h4>2. Arriviamo da te</h4>
-        <p>Il nostro team si sposta nella tua sede con bilance e strumenti certificati.</p>
-      </div>
-      <div class="feature-card">
-        <i class="fas fa-hand-holding-usd"></i>
-        <h4>3. Valutiamo</h4>
-        <p>Valutazione immediata e trasparente con emissione di documenti.</p>
-      </div>
-      <div class="feature-card">
-        <i class="fas fa-coins"></i>
-        <h4>4. Paghiamo</h4>
-        <p>Pagamento istantaneo in contanti o bonifico, come preferisci.</p>
-      </div>
-    </div>
-  </section>
-
-  <div class="cta">
-    <h3>Prenota il tuo appuntamento ora</h3>
-    <a href="contatti.html">Richiedi un appuntamento</a>
-  </div>
-
-  <footer>&copy; 2025 Compro Oro Frascati</footer>
-
-  <script>
-    // Toggle mobile menu
-    const ham = document.querySelector('.hamburger');
-    const menu = document.querySelector('.menu');
-    ham.addEventListener('click', () => menu.classList.toggle('open'));
-  </script>
-</body>
-</html>
+<section class="hero">
+  <h2>Chi Siamo</h2>
+  <p>Servizio Mobile di Compro Oro: Veniamo Direttamente da Te!</p>
+</section>
+<section>
+  <h3>La nostra missione</h3>
+  <p>Offrire comodità, trasparenza e sicurezza direttamente a casa tua.</p>
+</section>
+<footer>&copy; 2025 Compro Oro Frascati</footer>
