--- a/come-funziona.html
+++ b/come-funziona.html
@@ -1,1 +1,9 @@
-
+<section class="hero">
+  <h2>Come Funziona il Nostro Servizio</h2>
+  <ol>
+    <li>Prenota l'appuntamento online o via telefono.</li>
+    <li>Arriviamo con strumenti certificati.</li>
+    <li>Valutazione e pagamento immediato.</li>
+  </ol>
+</section>
+<footer>&copy; 2025 Compro Oro Frascati</footer>
