--- a/faq.html
+++ b/faq.html
@@ -1,1 +1,11 @@
-
+<section>
+  <h2>Domande Frequenti</h2>
+  <details>
+    <summary>Come avviene il pagamento?</summary>
+    <p>In contanti o bonifico istantaneo.</p>
+  </details>
+  <details>
+    <summary>Che tipo di oro acquistate?</summary>
+    <p>Qualsiasi caratura e stato.</p>
+  </details>
+</section>
