--- a/contatti.html
+++ b/contatti.html
@@ -1,1 +1,10 @@
-
+<section>
+  <h2>Contattaci</h2>
+  <form>
+    <input type="text" placeholder="Nome" required>
+    <input type="email" placeholder="Email" required>
+    <textarea placeholder="Messaggio"></textarea>
+    <button>Invia</button>
+  </form>
+  <p>Telefono: 0123 456789 | Email: info@comproorofrascati.it</p>
+</section>
