--- a/index.html
+++ b/index.html
@@ -1,30 +1,52 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Compro Oro Frascati</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
+  <script src="https://kit.fontawesome.com/yourkit.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<header>
-  <h1>Compro Oro Frascati</h1>
-  <p>Valutazioni Immediate, Pagamenti Immediati</p>
-</header>
-<nav>
-  <a href="index.html">Home</a>
-  <a href="stima.html">Stima Oro</a>
-  <a href="chi-siamo.html">Chi Siamo</a>
-  <a href="come-funziona.html">Come Funziona</a>
-  <a href="faq.html">FAQ</a>
-  <a href="contatti.html">Contatti</a>
-</nav>
-<section class="hero">
-  <h2>Vendere Oro Non è Mai Stato Così Semplice</h2>
-  <a href="stima.html" class="btn">Calcola Ora la Tua Stima</a>
-</section>
-<footer>&copy; 2025 Compro Oro Frascati</footer>
+  <header>
+    <h1>Compro Oro Frascati</h1>
+    <p>Valutazioni Immediate, Pagamenti Immediati</p>
+  </header>
+
+  <nav>
+    <div class="logo">COF</div>
+    <div class="hamburger"><i class="fas fa-bars"></i></div>
+    <div class="menu">
+      <a href="index.html" class="active">Home</a>
+      <a href="stima.html">Stima Oro</a>
+      <a href="chi-siamo.html">Chi Siamo</a>
+      <a href="come-funziona.html">Come Funziona</a>
+      <a href="faq.html">FAQ</a>
+      <a href="contatti.html">Prenota Appuntamento</a>
+    </div>
+  </nav>
+
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Vendere il Tuo Oro Non È Mai Stato Così Facile</h2>
+      <p>Su appuntamento veniamo direttamente da te con kit professionale.</p>
+      <a href="stima.html" class="btn">Calcola la tua Stima Gratis</a>
+    </div>
+  </section>
+
+  <section class="section">
+    <h3>Perché Scegliere COF</h3>
+    <p>Nessuna sede fissa: sicurezza, trasparenza e comodità senza muoverti da casa.</p>
+  </section>
+
+  <footer>&copy; 2025 Compro Oro Frascati</footer>
+
+  <script>
+    // Toggle mobile menu
+    const ham = document.querySelector('.hamburger');
+    const menu = document.querySelector('.menu');
+    ham.addEventListener('click', ()=> menu.classList.toggle('open'));
+  </script>
 </body>
 </html>
