--- a/contatti.html
+++ b/contatti.html
@@ -1,10 +1,65 @@
-<section>
-  <h2>Contattaci</h2>
-  <form>
-    <input type="text" placeholder="Nome" required>
-    <input type="email" placeholder="Email" required>
-    <textarea placeholder="Messaggio"></textarea>
-    <button>Invia</button>
-  </form>
-  <p>Telefono: 0123 456789 | Email: info@comproorofrascati.it</p>
-</section>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Prenota Appuntamento - COF</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
+  <!-- header+nav identici -->
+
+  <section class="section hero">
+    <div class="hero-content">
+      <h2>Prenota il Tuo Appuntamento</h2>
+      <p>Compila il form e verrai ricontattato per conferma.</p>
+    </div>
+  </section>
+
+  <main class="section">
+    <div class="form-card">
+      <form id="booking-form">
+        <label for="nome">Nome e Cognome</label>
+        <input type="text" id="nome" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" required>
+
+        <label for="telefono">Telefono</label>
+        <input type="tel" id="telefono" required>
+
+        <label for="indirizzo">Indirizzo (luogo di incontro)</label>
+        <textarea id="indirizzo" rows="2" required></textarea>
+
+        <label for="data">Data</label>
+        <input type="date" id="data" required>
+
+        <label for="ora">Fascia Oraria Preferita</label>
+        <select id="ora" required>
+          <option value="">-- scegli --</option>
+          <option>09:00–11:00</option>
+          <option>11:00–13:00</option>
+          <option>14:00–16:00</option>
+          <option>16:00–18:00</option>
+        </select>
+
+        <button type="submit">Invia Richiesta</button>
+        <div class="result" id="booking-result"></div>
+      </form>
+    </div>
+  </main>
+
+  <footer>&copy; 2025 Compro Oro Frascati</footer>
+
+  <script>
+    document.getElementById('booking-form').addEventListener('submit', e=>{
+      e.preventDefault();
+      // qui in un sito reale invieresti via AJAX/Formspree/EmailAPI
+      document.getElementById('booking-result').innerText =
+        'Grazie! Riceverai una nostra conferma a breve.';
+      e.target.reset();
+    });
+  </script>
+</body>
+</html>
