--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -43,10 +44,8 @@
   <footer>&copy; 2025 Compro Oro Frascati</footer>
 
   <script>
-    // Toggle mobile menu
-    const ham = document.querySelector('.hamburger');
-    const menu = document.querySelector('.menu');
-    ham.addEventListener('click', ()=> menu.classList.toggle('open'));
+    const ham=document.querySelector('.hamburger'), menu=document.querySelector('.menu');
+    ham.addEventListener('click',()=>menu.classList.toggle('open'));
   </script>
 </body>
 </html>
